--- a/WebContent/main.xhtml
+++ b/WebContent/main.xhtml
@@ -9,7 +9,6 @@
 
 	<h:outputStylesheet name="css/mainpage.css" />
 	<h:outputStylesheet name="css/header.css" />
-	<h:outputStylesheet name="css/mainpagegmap.css" />
 
 	<script src="http://maps.google.com/maps/api/js?sensor=false&amp;v=3.4"
 		type="text/javascript"></script>
@@ -25,12 +24,14 @@
 	<!-- Form that contains the search functionality and the add new Base Station button -->
 
 	<h:form id="mainform">
-		<h:inputText id="searchtextbox" />
-		<h:selectOneMenu id="searchtypeselect">
+		<h:inputText id="searchtextbox"
+			value="#{baseStationSearch.searchTerm}" />
+		<h:selectOneMenu id="searchtypeselect"
+			value="#{baseStationSearch.searchType}">
 			<f:selectItem itemValue="1" itemLabel="Name" />
 		</h:selectOneMenu>
 
-		<h:commandButton id="searchbutton" value="Search" />
+		<h:commandButton id="searchbutton" value="Search" action="#{baseStationMap.update()}"/>
 		<h:button id="addnewbutton" value="Add New" />
 
 		<!-- This creates the Google Maps element on the man page -->
