--- a/WebContent/newbasestation.xhtml
+++ b/WebContent/newbasestation.xhtml
@@ -64,25 +64,60 @@
 		<br />
 		<br />
 
-		<!--<h:outputLabel id="cabinetlabel" value="Cabinets" />
+
+		<h:outputLabel id="cabinetlabel" value="Cabinets" />
 		<br />
-		 <h:dataTable value="" var="c">
+		<h:dataTable value="#{baseStationBean.cabinets}" var="c">
 			<h:column>
 				<h:outputText id="cabinetnamelabelone" value="Cabinet " />
 				<h:outputText id="cabinetnamelabeltwo" value="#{c.slotNumber}" />
 			</h:column>
 
 			<h:column>
-				<h:commandButton value="Remove" />
+				<h:commandButton id="editcabinetbutton" value="Edit" />
 			</h:column>
 
 			<h:column>
-				<h:commandButton value="Edit" />
+				<h:commandButton id="removecabinetbutton" value="Remove" />
 			</h:column>
-		</h:dataTable> -->
+		</h:dataTable>
+		<br />
+		<h:button id="newcabinetbutton" value="New Cabinet"
+			action="newcabinet?bsp=newbasestation" />
 
-		<h:commandButton id="basestationsave" value="Save" action="#{baseStationBean.create('main')}"/>
-		<h:commandButton id="basestationdiscard" value="Discard" action="#{baseStationBean.discard('main')}"/>
+		<br />
+		<br />
+		<br />
+
+		<h:outputLabel id="antennalabel" value="Antennas" />
+		<br />
+		<h:dataTable value="#{baseStationBean.antenna}" var="c">
+			<h:column>
+				<h:outputText id="antennanamelabelone" value="Antenna " />
+				<h:outputText id="antennanamelabeltwo" value="#{c.slotNumber}" />
+			</h:column>
+
+			<h:column>
+				<h:commandButton id="editcabinetbutton" value="Edit" />
+			</h:column>
+
+			<h:column>
+				<h:commandButton id="removeantennabutton" value="Remove" />
+			</h:column>
+		</h:dataTable>
+		<br />
+		<h:button id="newantennabutton" value="New Antenna"
+			action="newantenna?bsp=newbasestation" />
+
+
+		<h:commandButton id="basestationsave" value="Save"
+			action="#{baseStationBean.create('main')}" />
+		<h:commandButton id="basestationdiscard" value="Discard"
+			action="#{baseStationBean.discard('main')}" />
+
+		<br />
+		<br />
+		<br />
 	</h:form>
 
 </h:body>
