--- a/WebContent/newbasestation.xhtml
+++ b/WebContent/newbasestation.xhtml
@@ -91,7 +91,7 @@
 
 		<h:outputLabel id="antennalabel" value="Antennas" />
 		<br />
-		<h:dataTable value="#{baseStationBean.antenna}" var="c">
+		<h:dataTable value="#{baseStationBean.antennas}" var="c">
 			<h:column>
 				<h:outputText id="antennanamelabelone" value="Antenna " />
 				<h:outputText id="antennanamelabeltwo" value="#{c.slotNumber}" />
