--- a/WebContent/newbasestation.xhtml
+++ b/WebContent/newbasestation.xhtml
@@ -83,7 +83,7 @@
 			</h:column>
 		</h:dataTable>
 		<br />
-		<h:button id="newcabinetbutton" value="New Cabinet"
+		<h:commandButton id="newcabinetbutton" value="New Cabinet"
 			action="newcabinet?bsp=newbasestation" />
 
 		<br />
@@ -92,7 +92,7 @@
 
 		<h:outputLabel id="antennalabel" value="Antennas" />
 		<br />
-		<h:dataTable value="#{baseStationBean.antennas}" var="c">
+		<h:dataTable id="antennaTable" value="#{baseStationBean.antennas}" var="c">
 			<h:column>
 				<h:outputText id="antennanamelabelone" value="Antenna " />
 				<h:outputText id="antennanamelabeltwo" value="#{c.slotNumber}" />
@@ -107,8 +107,8 @@
 			</h:column>
 		</h:dataTable>
 		<br />
-		<h:button id="newantennabutton" value="New Antenna"
-			outcome="newantenna?bsp=newbasestation" />
+		<h:commandButton id="newantennabutton" value="New Antenna"
+			action="newantenna?faces-redirect=true&amp;bsp=newbasestation" />
 
 		<!-- <h:commandButton id="testingbutton" value="test" onclick="window.alert('hello')"
 			action="main" /> -->
