--- a/WebContent/newbasestation.xhtml
+++ b/WebContent/newbasestation.xhtml
@@ -92,18 +92,18 @@
 
 		<h:outputLabel id="antennalabel" value="Antennas" />
 		<br />
-		<h:dataTable id="antennaTable" value="#{baseStationBean.antennas}" var="c">
-			<h:column>
+		<h:dataTable id="antennatable" value="#{baseStationBean.antennas}" var="a">
+			<h:column id="antennanamecolumn">
 				<h:outputText id="antennanamelabelone" value="Antenna " />
-				<h:outputText id="antennanamelabeltwo" value="#{c.slotNumber}" />
+				<h:outputText id="antennanamelabeltwo" value="#{a.slotNumber}" />
 			</h:column>
 
-			<h:column>
+			<h:column id="editcabinetcolumn">
 				<h:commandButton id="editcabinetbutton" value="Edit" />
 			</h:column>
 
-			<h:column>
-				<h:commandButton id="removeantennabutton" value="Remove" />
+			<h:column id="removeantennacolumn">
+				<h:commandButton id="removeantennabutton" value="Remove" action="#{baseStationBean.removeAntenna(a)}"/>
 			</h:column>
 		</h:dataTable>
 		<br />
