--- a/WebContent/newbasestation.xhtml
+++ b/WebContent/newbasestation.xhtml
@@ -14,6 +14,9 @@
 	<h:outputStylesheet name="css/editbasestation.css" />
 	<h:outputStylesheet name="css/formtemplate.css" />
 	<h:outputStylesheet name="css/header.css" />
+
+	<script src="http://maps.google.com/maps/api/js?sensor=false&amp;v=3.4"
+		type="text/javascript"></script>
 </h:head>
 
 <h:body>
@@ -43,6 +46,11 @@
 		<br />
 		<br />
 		<br />
+		
+		<p:gmap center="0,0" zoom="2" type="MAP"
+			model="#{locationDragMap.map}" style="position:fixed;left:50%; width:20%;height:100px">
+			<p:ajax event="markerDrag" listener="#{locationDragMap.onMarkerDrag}" />
+		</p:gmap>
 
 		<h:outputText id="longitudelabel" value="Longitude" />
 		<h:message for="longitudetextbox" id="longitudevalidatormessage" />
